[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
version = "1.0.0"
name = "cht_bathymetry"
authors = [
    {name = "Maarten van Ormondt", email = "maarten.vanormondt@deltares-usa.us"},
]
requires-python = ">=3.10"
dependencies = [
#    "hydromt",
    "pyproj",
    "rasterio",
    "rioxarray",
    "xarray",
    "boto3",
    "cht-utils",
    "numpy",
    "pyyaml",
    "toml",
    "shapely",
    "geopandas",
    "netCDF4",
]
